[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/sounds/C4.ogg" type="AudioStream" id=1]
[ext_resource path="res://scenes/WhiteBackground/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://resources/ChallengeTitleFontData.tres" type="DynamicFontData" id=4]
[ext_resource path="res://resources/ChallengeNumberFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sprites/challenges/4-game-is-on/char-ch4.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/line-draghereuto.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/characters/char-uto.png" type="Texture" id=8]
[ext_resource path="res://scenes/challenges/challenge4-intro/Challenge4Intro.gd" type="Script" id=9]
[ext_resource path="res://resources/DragUtoHereFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://resources/ChallengeRuleFontBig.tres" type="DynamicFont" id=11]
[ext_resource path="res://resources/ChallengeRuleBoldFontBig.tres" type="DynamicFont" id=12]
[ext_resource path="res://objects/SettingsIcon.tscn" type="PackedScene" id=13]
[ext_resource path="res://objects/UTO.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/challenges/challenge4-intro/RedText.gd" type="Script" id=15]
[ext_resource path="res://scenes/challenges/challenge4-intro/ToWin.gd" type="Script" id=16]
[ext_resource path="res://scenes/challenges/challenge4-intro/DragUtoHereLabel.gd" type="Script" id=17]
[ext_resource path="res://scenes/challenges/challenge4-intro/ToStartLabel.gd" type="Script" id=18]
[ext_resource path="res://objects/shaders/GrayScaleShader.tscn" type="PackedScene" id=19]
[ext_resource path="res://objects/overlay/Overlay.tscn" type="PackedScene" id=20]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 87.0626, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90, 14 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 82.0719, 15.6978 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 66, 17.5856 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 70, 17 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 54.4521, 4.90112 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 144.859, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 145.879, 16.0208 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 54.188, 6.18396 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 91.6075, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 93.6139, 16.021 )

[node name="Challenge4Intro" type="Node2D"]
script = ExtResource( 9 )
textMovementSpeed = 6.0

[node name="ChallengeVictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Challenge" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -87.5
margin_top = 57.0
margin_right = 87.5
margin_bottom = 103.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Challenge"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.5
margin_top = 210.0
margin_right = 166.5
margin_bottom = 293.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game is on"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsABarrier" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_top = 405.0
margin_right = 276.0
margin_bottom = 460.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IS A BARRIER."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueTextCanBePushed" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -261.5
margin_top = 457.0
margin_right = 269.5
margin_bottom = 512.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BLUE TEXT CAN BE PUSHED."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="BG/Control/BlueTextCanBePushed"]
visible = false
position = Vector2( 94, 62 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/BlueTextCanBePushed/Area2D"]
shape = SubResource( 2 )

[node name="RedText" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -235.0
margin_top = 405.0
margin_right = -51.0
margin_bottom = 460.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.101961, 0.231373, 0.894118, 1 )
text = "RED TEXT"
align = 1
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BG/Control/RedText"]
show_behind_parent = true
margin_left = -34.0
margin_top = 9.0
margin_right = 183.0
margin_bottom = 44.0
color = Color( 0.976471, 0.968627, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTrigger" type="Area2D" parent="BG/Control/RedText"]
visible = false
position = Vector2( 92, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/RedText/TopTrigger"]
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="BG/Control/RedText"]
visible = false
position = Vector2( 7, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/RedText/StaticBody2D"]
position = Vector2( 85, 24 )
shape = SubResource( 4 )

[node name="BottomTrigger" type="Area2D" parent="BG/Control/RedText"]
visible = false
position = Vector2( 92, 43 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/RedText/BottomTrigger"]
shape = SubResource( 3 )

[node name="YouAreJustANumber" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.5
margin_top = 509.0
margin_right = 244.5
margin_bottom = 564.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU ARE JUST A NUMBER,"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsAlwaysPlay" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.5
margin_top = 559.0
margin_right = 104.5
margin_bottom = 614.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AS ALWAYS PLAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToWin" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 78.0
margin_top = 559.0
margin_right = 229.0
margin_bottom = 614.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.101961, 0.231373, 0.894118, 1 )
text = "TO WIN."
align = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BG/Control/ToWin"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 9.0
margin_right = -14.0
margin_bottom = -11.0
color = Color( 0.976471, 0.968627, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTrigger" type="Area2D" parent="BG/Control/ToWin"]
position = Vector2( 70, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToWin/TopTrigger"]
position = Vector2( 0, -9 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="BG/Control/ToWin"]
position = Vector2( 8, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToWin/StaticBody2D"]
position = Vector2( 63, 15 )
shape = SubResource( 6 )

[node name="BottomTrigger" type="Area2D" parent="BG/Control/ToWin"]
position = Vector2( 70, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToWin/BottomTrigger"]
shape = SubResource( 5 )

[node name="LeftTrigger" type="Area2D" parent="BG/Control/ToWin"]
position = Vector2( 0, 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToWin/LeftTrigger"]
shape = SubResource( 7 )

[node name="RedLineUpper" type="TextureRect" parent="BG/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -571.0
margin_bottom = -556.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uto" type="TextureRect" parent="BG/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.5
margin_top = -482.0
margin_right = 59.5
margin_bottom = -363.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedLineBottom" type="TextureRect" parent="BG/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -284.0
margin_bottom = -269.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragUtoHereLabel" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -234.0
margin_top = -177.0
margin_right = 69.0
margin_bottom = -122.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.631373, 0.101961, 0.101961, 1 )
text = "DRAG UTO HERE"
align = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TopTrigger" type="Area2D" parent="BG/Control/DragUtoHereLabel"]
visible = false
position = Vector2( 153, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/DragUtoHereLabel/TopTrigger"]
shape = SubResource( 8 )

[node name="StaticBody2D" type="StaticBody2D" parent="BG/Control/DragUtoHereLabel"]
visible = false
position = Vector2( 153, 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/DragUtoHereLabel/StaticBody2D"]
shape = SubResource( 9 )

[node name="BottomTrigger" type="Area2D" parent="BG/Control/DragUtoHereLabel"]
visible = false
position = Vector2( 153, 46 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/DragUtoHereLabel/BottomTrigger"]
shape = SubResource( 8 )

[node name="RightTrigger" type="Area2D" parent="BG/Control/DragUtoHereLabel"]
visible = false
position = Vector2( 296, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/DragUtoHereLabel/RightTrigger"]
position = Vector2( 0, -7 )
shape = SubResource( 10 )

[node name="ToStartLabel" type="Label" parent="BG/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 73.0
margin_top = -177.0
margin_right = 259.0
margin_bottom = -122.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.631373, 0.101961, 0.101961, 1 )
text = "TO START"
align = 1
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TopTrigger" type="Area2D" parent="BG/Control/ToStartLabel"]
visible = false
position = Vector2( 92, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToStartLabel/TopTrigger"]
shape = SubResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="BG/Control/ToStartLabel"]
visible = false
position = Vector2( 92, 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToStartLabel/StaticBody2D"]
shape = SubResource( 12 )

[node name="BottomTrigger" type="Area2D" parent="BG/Control/ToStartLabel"]
visible = false
position = Vector2( 92, 46 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Control/ToStartLabel/BottomTrigger"]
shape = SubResource( 11 )

[node name="SettingsIcon" parent="BG/Control" instance=ExtResource( 13 )]
position = Vector2( 65, 1272 )
scale = Vector2( 1.1, 1.1 )

[node name="UTO" parent="BG" instance=ExtResource( 14 )]
position = Vector2( 369.5, 168 )
scale = Vector2( 0.4, 0.4 )

[node name="FourSprite" type="Sprite" parent="BG/UTO"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": "
"
}

[node name="GrayScaleShader" parent="BG" instance=ExtResource( 19 )]
visible = false

[node name="Overlay" parent="." instance=ExtResource( 20 )]
[connection signal="gameover" from="." to="." method="_on_Challenge4Intro_gameover"]
[connection signal="red_text_pushable" from="." to="BG/Control/ToWin" method="_on_Challenge4Intro_red_text_pushable"]
[connection signal="red_text_pushable" from="." to="BG/Control/RedText" method="_on_Challenge4Intro_red_text_pushable"]
[connection signal="victory" from="." to="BG/Control/DragUtoHereLabel" method="_on_Challenge4Intro_victory"]
[connection signal="victory" from="." to="." method="_on_Challenge4Intro_victory"]
[connection signal="area_entered" from="BG/Control/BlueTextCanBePushed/Area2D" to="." method="_on_BlueTextCanBePushed_Area2D_area_entered"]
[connection signal="body_entered" from="BG/Control/SettingsIcon" to="." method="_on_SettingsIcon_body_entered"]
